# snake

./: .clang-format  CMakeLists.txt  README.md
include/: button.hpp  figures.hpp  gview.hpp  human.hpp  model.hpp  tview.hpp  view.hpp
source/: figures.cpp  gview.cpp  human.cpp  main.cpp  model.cpp  tview.cpp  view.cpp
